@@ -2444,6 +2444,14 @@ effect *player_effect_add(player *p, effect *e)
 
         case ET_INC_HP:
         case ET_MAX_HP:
+            {
+                /* also cure sickness, if present */
+                effect *sickness;
+                if ((sickness = player_effect_get(p, ET_SICKNESS)))
+                {
+                    player_effect_del(p, sickness);
+                }
+            }
             if (p->hp != (int)p->hp_max)
             {
                     guint amount = (p->hp_max * e->amount) / 100;
